crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_inner_if_branch.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_inner_if_branch

type Handle = MkHandle#0(Int)
instance core/disposable.Disposable[Handle] { dispose=Disposable$$Handle$$dispose }
extern java "krypton.runtime.KryptonIO" println(o10) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (o10) -> Unit

fn main() -> Unit =
  let v0: Unit = call println("before")
  let_join v6(v4: Unit) =
    let v5: Unit = call println("after")
    v5
  in
  if true {
    let v1: ~Handle = construct Handle::MkHandle#0(1)
    let v2: Unit = call println("opened")
    let v3: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
    auto_close[Handle](v1, dict=v3, null=true)
    jump v6(v2)
  } else {
    jump v6(())
  }

fn Disposable$$Handle$$dispose(v7: ~Handle) -> Unit =
  switch v7 {
    0 (v8: Int) ->
      let v9: Unit = call println("closed")
      v9
  }
