crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_lifo.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_lifo

type HandleA = MkHandleA#0(Int)
type HandleB = MkHandleB#0(Int)
instance core/disposable.Disposable[HandleA] { dispose=Disposable$$HandleA$$dispose }
instance core/disposable.Disposable[HandleB] { dispose=Disposable$$HandleB$$dispose }
extern java "krypton.runtime.KryptonIO" println(r10) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (r10) -> Unit

fn main() -> Unit =
  let v0: ~HandleA = construct HandleA::MkHandleA#0(1)
  let v1: Unit = call println("a")
  let v2: ~HandleB = construct HandleB::MkHandleB#0(2)
  let v3: Unit = call println("b")
  let v4: Dict[core/disposable.Disposable, HandleB] = get_dict core/disposable.Disposable[HandleB]
  auto_close[HandleB](v2, dict=v4, null=true)
  let v5: Dict[core/disposable.Disposable, HandleA] = get_dict core/disposable.Disposable[HandleA]
  auto_close[HandleA](v0, dict=v5, null=true)
  v3

fn Disposable$$HandleA$$dispose(v6: ~HandleA) -> Unit =
  switch v6 {
    0 (v7: Int) ->
      let v8: Unit = call println("close_a")
      v8
  }

fn Disposable$$HandleB$$dispose(v9: ~HandleB) -> Unit =
  switch v9 {
    0 (v10: Int) ->
      let v11: Unit = call println("close_b")
      v11
  }
