crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_nested_block.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_nested_block

type HandleA = MkHandleA#0(Int)
type HandleB = MkHandleB#0(Int)
instance core/disposable.Disposable[HandleA] { dispose=Disposable$$HandleA$$dispose }
instance core/disposable.Disposable[HandleB] { dispose=Disposable$$HandleB$$dispose }
extern java "krypton.runtime.KryptonIO" println(b12) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (b12) -> Unit

fn main() -> Unit =
  let v0: ~HandleA = construct HandleA::MkHandleA#0(1)
  let v1: Unit = call println("open_a")
  let_join v7(v5: Unit) =
    let v6: Unit = call println("after_inner")
    let v8: Dict[core/disposable.Disposable, HandleA] = get_dict core/disposable.Disposable[HandleA]
    auto_close[HandleA](v0, dict=v8, null=true)
    v6
  in
  let v2: ~HandleB = construct HandleB::MkHandleB#0(2)
  let v3: Unit = call println("open_b")
  let v4: Dict[core/disposable.Disposable, HandleB] = get_dict core/disposable.Disposable[HandleB]
  auto_close[HandleB](v2, dict=v4, null=true)
  jump v7(v3)

fn Disposable$$HandleA$$dispose(v9: ~HandleA) -> Unit =
  switch v9 {
    0 (v10: Int) ->
      let v11: Unit = call println("close_a")
      v11
  }

fn Disposable$$HandleB$$dispose(v12: ~HandleB) -> Unit =
  switch v12 {
    0 (v13: Int) ->
      let v14: Unit = call println("close_b")
      v14
  }
