crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_nested_block_panic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_nested_block_panic

type HandleA = MkHandleA#0(Int)
type HandleB = MkHandleB#0(Int)
instance core/disposable.Disposable[HandleA] { dispose=Disposable$$HandleA$$dispose }
instance core/disposable.Disposable[HandleB] { dispose=Disposable$$HandleB$$dispose }
extern java "krypton.runtime.KryptonIO" println(z7) -> Unit
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare panic
declare println: (z7) -> Unit

fn main() -> Unit =
  let v0: ~HandleA = construct HandleA::MkHandleA#0(1)
  let v1: Unit = call println("open_a")
  let v2: ~HandleB = construct HandleB::MkHandleB#0(2)
  let v3: Unit = call println("open_b")
  let v4: Unit = call panic("boom")
  let v5: Dict[core/disposable.Disposable, HandleB] = get_dict core/disposable.Disposable[HandleB]
  auto_close[HandleB](v2, dict=v5, null=true)
  let v6: Dict[core/disposable.Disposable, HandleA] = get_dict core/disposable.Disposable[HandleA]
  auto_close[HandleA](v0, dict=v6, null=true)
  v4

fn Disposable$$HandleA$$dispose(v7: ~HandleA) -> Unit =
  switch v7 {
    0 (v8: Int) ->
      let v9: Unit = call println("close_a")
      v9
  }

fn Disposable$$HandleB$$dispose(v10: ~HandleB) -> Unit =
  switch v10 {
    0 (v11: Int) ->
      let v12: Unit = call println("close_b")
      v12
  }
