crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_question_mark.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_question_mark

type Handle = MkHandle#0(String)
instance core/disposable.Disposable[Handle] { dispose=Disposable$$Handle$$dispose }
extern java "krypton.runtime.KryptonIO" println(x10) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (x10) -> Unit

fn fallible() -> Result[String, Int] =
  let v0: Result[String, Int] = construct Result::Err#1("fail")
  v0

fn work() -> Result[String, Int] =
  let_join v1(v2: Result[String, Int]) =
    v2
  in
  let v3: ~Handle = construct Handle::MkHandle#0("test")
  let v4: Unit = call println("opened")
  let_join v12(v5: Int) =
    let v11: Result[String, Int] = construct Result::Ok#0(v5)
    let v13: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
    auto_close[Handle](v3, dict=v13, null=true)
    v11
  in
  let v6: Result[String, Int] = call fallible()
  switch v6 {
    0 (v7: Int) ->
      jump v12(v7)
    1 (v8: String) ->
      let v9: Result[String, Int] = construct Result::Err#1(v8)
      let v10: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
      auto_close[Handle](v3, dict=v10, null=false)
      jump v1(v9)
  }

fn main() -> Unit =
  let v14: Result[String, Int] = call work()
  switch v14 {
    0 (v15: Int) ->
      let v16: Unit = call println(v15)
      v16
    1 (v17: String) ->
      let v18: Unit = call println("err")
      v18
  }

fn Disposable$$Handle$$dispose(v19: ~Handle) -> Unit =
  switch v19 {
    0 (v20: String) ->
      let v21: Unit = call println("closed")
      v21
  }
