crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_recur.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_recur

type Handle = MkHandle#0(Int)
instance core/disposable.Disposable[Handle] { dispose=Disposable$$Handle$$dispose }
extern java "krypton.runtime.KryptonIO" println(q8) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (q8) -> Unit

fn loop(v0: Int) -> Unit =
  let_join [recur] v1(v2: Int) =
    let_join v13(v6: Bool) =
      if v6 {
        let v7: Unit = call println("done")
        v7
      } else {
        let v8: ~Handle = construct Handle::MkHandle#0(v2)
        let v9: Unit = call println("iter")
        let v10: Int = add_int(v2, 1)
        let v11: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
        auto_close[Handle](v8, dict=v11, null=true)
        jump v1(v10)
      }
    in
    let v3: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
    let v4: Bool = trait_call core/ord.Ord.lt(v3, v2, 3)
    let v5: Bool = not(v4)
    jump v13(v5)
  in
  jump v1(v0)

fn main() -> Unit =
  let v14: Unit = call loop(0)
  v14

fn Disposable$$Handle$$dispose(v15: ~Handle) -> Unit =
  switch v15 {
    0 (v16: Int) ->
      let v17: Unit = call println("closed")
      v17
  }
