crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_recur_panic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_recur_panic

type Handle = MkHandle#0(Int)
instance core/disposable.Disposable[Handle] { dispose=Disposable$$Handle$$dispose }
extern java "krypton.runtime.KryptonIO" println(y7) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare panic
declare println: (y7) -> Unit

fn loop(v0: Int) -> Unit =
  let_join [recur] v1(v2: Int) =
    let v3: ~Handle = construct Handle::MkHandle#0(v2)
    let_join v17(v6: Bool) =
      if v6 {
        let v7: Unit = call println("iter0")
        let v8: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
        auto_close[Handle](v3, dict=v8, null=true)
        jump v1(1)
      } else {
        let_join v16(v11: Bool) =
          if v11 {
            let v12: Unit = call println("iter1")
            let v13: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
            auto_close[Handle](v3, dict=v13, null=true)
            jump v1(2)
          } else {
            let v14: Unit = call println("boom_iter")
            let v15: Never = call panic("boom")
            let v18: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
            auto_close[Handle](v3, dict=v18, null=true)
            v15
          }
        in
        let v9: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
        let v10: Bool = trait_call core/eq.Eq.eq(v9, v2, 1)
        jump v16(v10)
      }
    in
    let v4: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
    let v5: Bool = trait_call core/eq.Eq.eq(v4, v2, 0)
    jump v17(v5)
  in
  jump v1(v0)

fn main() -> Unit =
  let v19: Unit = call loop(0)
  v19

fn Disposable$$Handle$$dispose(v20: ~Handle) -> Unit =
  switch v20 {
    0 (v21: Int) ->
      let v22: Unit = call println("closed")
      v22
  }
