crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_shadow.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_shadow

type Handle = MkHandle#0(String)
instance core/disposable.Disposable[Handle] { dispose=Disposable$$Handle$$dispose }
extern java "krypton.runtime.KryptonIO" println(x7) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[w7]) -> List[w7]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (x7) -> Unit

fn main() -> Unit =
  let v0: ~Handle = construct Handle::MkHandle#0("1")
  let v1: Unit = call println("open1")
  let v2: ~Handle = construct Handle::MkHandle#0("2")
  let v4: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
  auto_close[Handle](v0, dict=v4, null=true)
  let v3: Unit = call println("open2")
  let v5: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
  auto_close[Handle](v2, dict=v5, null=true)
  v3

fn Disposable$$Handle$$dispose(v6: ~Handle) -> Unit =
  switch v6 {
    0 (v7: String) ->
      let v8: Unit = call println("closed")
      v8
  }
